--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -18,38 +17,7 @@ body {
     width: 1120px;
     border: solid;
     border-color: #F5F4F0;
-    margin: 88px 80px 137px;
-}
-
-h1, h2, h3 {
-    line-height: auto;
-    font-weight: bold;
-}
-
-h1 {
-    font-size: 36px;
-}
-
-h2 {
-    font-size: 32px;
-}
-
-h3 {
-    font-size: 28px;
-    margin-left: 10px;
-}
-
-.extra {
-    line-height: auto;
-    font-weight: bold;
-}
-
-.headline {
-    font-size: 16px;
-    line-height: 22px;
-    font-weight: bold;
-    color: #e1624f;
-    text-transform: uppercase
+    margin: 88px auto 137px;
 }
 
 img {
@@ -63,6 +31,38 @@ main div img {
     margin-top: 44px;
 }
 
+.headline {
+    font-size: 16px;
+    line-height: 22px;
+    font-weight: bold;
+    color: #e1624f;
+    text-transform: uppercase;
+}
+
+h1, h2, h3 {
+    line-height: auto;
+    font-weight: bold;
+}
+
+h1 {
+    font-size: 36px;
+    margin-top: 8px;
+    margin-bottom: 44px;
+}
+
+h2 {
+    font-size: 32px;
+    margin-top: 2px;
+    margin-bottom: 8px;
+}
+
+h3 {
+    font-size: 28px;
+    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 4px;
+}
+
 .subtitle {
     font-size: 16px;
     line-height: 22px;
@@ -70,8 +70,36 @@ main div img {
     text-align: center;
     color: #333333;
     margin-top: 24px;
+    margin-bottom: 40px;
 }
 
+.divider {
+    width: 100%;
+    height: 1px;
+    margin: 36px 0;
+    background-color: #D9D9D9;
+}
+
+.extra {
+    line-height: auto;
+    font-weight: bold;
+}
+
+#d1 {
+    margin-bottom: 64px;
+}
+
+#temple1 {
+    margin-top: 64px;
+}
+
+#temple2, #temple3 {
+    margin-top: 48px;
+}
+
+.historia{
+    color: #0C51A7;
+}
 
 ul {
     margin-left: 26px;
@@ -87,10 +115,6 @@ ul {
     font-weight: bold;
 }
 
-.historia{
-    color: #0C51A7;
-}
-
 #casais {
     color: #591B98;
 }
@@ -103,9 +127,15 @@ ul {
     color: #E95E10;
 }
 
-.divider {
-    width: 100%;
-    height: 1px;
-    margin: 36px 0;
-    background-color: #D9D9D9;
+#d2 {
+    margin-top: 40px;
+    margin-bottom: 40px;
+}
+
+.description {
+    font-size: 16px;
+    line-height: auto;
+    text-align: center;
+    color: #333333;
+    margin-bottom: 65px;
 }
